# todo-app

./: README.md
backend/: Cargo.toml
backend/migrations/: 20231110112847_todos.sql
backend/src/: handlers.rs  main.rs
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte  +page.ts
