[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["form"] }
axum-error = "0.2.0"
dotenv = "0.15.0"
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
